# office2md

./: # Code Citations.md  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
examples/: README.md  create_samples.py  create_test_document.py
examples/input/: sample.docx  sample.pptx  sample.xlsx  test_formatting.docx
office2md/: __init__.py  __version__.py  _version.py  cli.py  converter_factory.py
office2md/converters/: __init__.py  base_converter.py  basic_docx_converter.py  docling_converter.py  docx_converter.py  mammoth_converter.py  pandoc_converter.py  pptx_converter.py  xlsx_converter.py
scripts/: bump_version.py  quality_check.py
tests/: __init__.py  test_cli.py  test_converter_factory.py
tests/converters/: __init__.py  test_docling_converter.py  test_docx_converter.py  test_pandoc_converter.py  test_pptx_converter.py  test_xlsx_converter.py
