[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "office2md"
dynamic = ["version"]
description = "Convert Office files (DOCX, XLSX, PPTX) to Markdown"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rodrigo Guimaraes"}
]
keywords = ["office", "markdown", "converter", "docx", "xlsx", "pptx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "mammoth>=1.6.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
"Homepage" = "https://github.com/rodgui/office2md"
"Bug Tracker" = "https://github.com/rodgui/office2md/issues"

[project.scripts]
office2md = "office2md.cli:main"

[tool.setuptools_scm]
write_to = "office2md/_version.py"
version_scheme = "post-release"
tag_regex = "^(?P<prefix>v)?(?P<version>[vV]?\\d+(?:\\.\\d+)*(?:[._-]?(?:alpha|a|beta|b|rc)\\d*)?)(?P<suffix>.*)?$"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=office2md --cov-report=html"
